# nasa-backup-

./: .gitignore  README.md  app.py  cumulative_2025.09.26_06.02.28.csv  kepler models.ipynb  notes.md  project nasa.ipynb  pyproject.toml  ui.py
models/: lr_model.joblib  rf_model.joblib  svm_model.joblib
src/: clean.py  preprocessing.py  train.py  util.py
